uploading man files is done

--- a/css/768.css
+++ b/css/768.css
@@ -29,4 +29,12 @@
 	.submitPageBox {
 		margin-top: 0px;
 	}
+	/* form2*/
+	.paperForm2 table , .tablePreviewSubmition, .tableManuscript {
+		font-size: 13px;
+	}
+	#paperForm2 .toggleAuthorDiv .btn-primary {
+		width: 50%;
+		max-width: 50%;
+	}
 }
