--- a/css/main.css
+++ b/css/main.css
@@ -494,8 +494,26 @@ body {
 	text-align: center;
 	
 }
+.displayError {
+	color:red;
+	text-align: center;
+	
+}
 
 /* profile page */
+.verifDiv, .successDiv {
+	background-color: white;
+	border: thin solid gray;
+	color: red;
+	font-family: Times New Roman , Cambria, Hoefler Text, Liberation Serif, Times, serif;
+	height: 40px;
+	line-height: 40px;
+	text-align: center;
+	font-size: 20px;
+}
+.successDiv {
+	color: green;
+}
 .profilePage {
 	background-color: white;
 }
