--- a/css/main.css
+++ b/css/main.css
@@ -736,3 +736,71 @@ body {
 .archiveBox .openViews {
 	margin-top: 20px;
 }
+/* edit manuscript*/
+.manEditDiv {
+	background-color: white;
+	padding-top: 10px;
+	font-family: Times New Roman , Cambria, Hoefler Text, Liberation Serif, Times, serif;
+}
+.manEditDiv div {
+	margin-left: 10px;
+}
+.manEditDiv div input , .manEditDiv div textarea{
+	width: 80%;
+	height: 40px;
+	margin-top: 10px;
+	font-family: Times New Roman , Cambria, Hoefler Text, Liberation Serif, Times, serif;
+	font-size: 16px;
+	border-radius: 4px;
+	border:thin solid gray;
+}
+
+.manEditDiv div input:focus , .manEditDiv div textarea:focus{
+	box-shadow: 1px 1px 10px 1px #16FF80;
+}
+.manEditDiv div textarea {
+	height: 300px;
+}
+.manEditDiv .editAuthors, .manEditDiv .editFigures {
+	margin-top: 20px;
+	font-size: 20px;
+	
+}
+.manEditDiv div img{
+	display: inline-block;
+	margin-right: 30px;
+	height: 45px;
+	margin-top: 10px;
+}
+.manEditDiv .authorRow div{
+	margin-top: 5px;
+}
+.manEditDiv div span {
+	margin-right: 20px;
+	text-decoration: underline;
+	font-size: 16px;
+	
+}
+.manEditDiv div .a-icon {
+	height: 150px;
+}
+
+.manEditDiv .authorInfoBoxDiv .select {
+	height: 40px;
+	border:thin solid gray;
+	display: block;
+	margin-bottom: 10px;
+	width: 80%;
+	border-radius: 5px;
+}
+.manEditDiv .authorInfoBoxDiv .select:focus {
+	box-shadow: 1px 1px 10px 1px #16FF80;
+	
+}
+.manEditDiv .authorInfoBoxDiv {
+	margin-bottom: 20px;
+}
+.manEditDiv .cauthor-cion {
+	color: green;
+	margin-left: 10px;
+}
