--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,18 @@ body {
 .mainlogo3 {
 	display: none;
 }
+.logo2:after {
+	content: "Journal of Toxicology and Molecular Biology";
+	margin-left: 40px;
+	background: 
+		-webkit-linear-gradient( #37bf1c, #000);
+   background-clip: border-box;
+	-webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+	font-family: Times New Roman, Cambria, Hoefler Text, Liberation Serif, Times,  serif;
+	font-size: 20px;
+	
+}
 .navbar-inverse .navbar-nav li a:visited , .navbar-inverse .navbar-nav li a, 
  .navbar-inverse .navbar-nav li a:hover , .navbar-inverse .navbar-nav li a:focus, .navbar-inverse .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-inverse .navbar-nav .open .dropdown-menu > li > a:focus{
 	color:black;
@@ -45,7 +57,7 @@ body {
 	margin-bottom: 120px;
 }
 .firstContent {
-	margin-top: 110px;
+	margin-top: 150px;
 }
 .firstContent .sliderBox .slide .item img {
 	height: 400px;
@@ -137,7 +149,7 @@ body {
 	color:black;
 }
 .aboutUsContent, .authorsPageBox , .contactusPageBox{
-	margin-top: 110px;
+	margin-top: 150px;
 	font-family: Times New Roman , Cambria, Hoefler Text, Liberation Serif, Times, serif;
 	font-size: 19px;
 }
@@ -191,7 +203,7 @@ body {
 	
 }
 .submitPageBox {
-	margin-top: 60px;
+	margin-top: 90px;
 	text-align: justify;
 }
 #paperForm1, #paperForm2 {
@@ -415,7 +427,7 @@ body {
 
 /* login div */
 .loginPage {
-	margin-top: 50px;
+	margin-top: 150px;
 }
 .loginDiv form {
 	background-color: white;
@@ -446,7 +458,7 @@ body {
 /*registration */
 
 .registerPage {
-	margin-top: 50px;
+	margin-top: 90px;
 }
 .registerDiv form {
 	background-color: white;
@@ -505,6 +517,9 @@ body {
 }
 
 /* profile page */
+.profileContainer {
+	margin-top: 90px;
+}
 .verifDiv, .successDiv {
 	background-color: white;
 	border: thin solid gray;
@@ -568,6 +583,9 @@ body {
 	display: none;
 }
 /* manuscript */
+.tracksContainer {
+	margin-top: 50px;
+}
 .manuscriptDiv {
 	font-family: Times New Roman , Cambria, Hoefler Text, Liberation Serif, Times, serif;
 	text-align: justify;
@@ -624,7 +642,7 @@ body {
 	display: inline-block;
 }
 .editorBox {
-	margin-top: 110px;
+	margin-top: 150px;
 	background-color: white;
 	border:thin solid gray;
 	border-radius: 5px;
@@ -674,7 +692,7 @@ body {
 }
 /*archive*/
 .archiveDiv {
-	margin-top: 110px;
+	margin-top: 150px;
 	font-family: Times New Roman , Cambria, Hoefler Text, Liberation Serif, Times, serif;
 }
 .archiveDiv ul {
@@ -739,7 +757,7 @@ body {
 /* edit manuscript*/
 .manEditDiv {
 	background-color: white;
-	padding-top: 10px;
+	padding-top: 40px;
 	font-family: Times New Roman , Cambria, Hoefler Text, Liberation Serif, Times, serif;
 }
 .manEditDiv div {
