--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@ body {
 	-webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 	font-family: Times New Roman, Cambria, Hoefler Text, Liberation Serif, Times,  serif;
-	font-size: 20px;
+	font-size: 30px;
 	
 }
 .navbar-inverse .navbar-nav li a:visited , .navbar-inverse .navbar-nav li a, 
@@ -63,10 +63,11 @@ body {
 	height: 400px;
 }
 .coverpage {
-	background-image: url(../uploads/sitefiles/slide/coverpage.png);
-	height: 400px;
 	margin-left: 1px;
-	background-size: cover;
+}
+.coverpage img{
+	margin-left: 1px;
+	max-width: 100%;
 }
 .latestArticleBar , .rightbarText{
 	margin-top: 20px;
